agregado de seccion contacto

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Federacion de Cestoball de Capital Federal</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="principal.css">
     <script src="https://kit.fontawesome.com/bf0c75d29d.js" crossorigin="anonymous"></script>
 
 </head>
@@ -17,13 +17,13 @@
         </div>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">INICIO</a></li>
-                <li><a href="#">FIXTURE</a></li>
-                <li><a href="#">CLUBS</a></li>
-                <li><a href="#">NOTICIAS</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li><a href="fixture.html">FIXTURE</a></li>
+                <li><a href="club.html">CLUBS</a></li>
+                <li><a href="noticias.html">NOTICIAS</a></li>
             </ul>
         </nav>
-        <a href="#" class="btn"><button>CONTACTO</button></a>
+        <a href="contacto.html" class="btn"><button>CONTACTO</button></a>
 
     </header>
 
@@ -94,11 +94,13 @@
         <div class="box">
             <h2>Redes Sociales</h2>
             <div class="red-social">
-                <a href="https://www.facebook.com/CestoCapital?locale=es_LA" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.instagram.com/cestocapital/?igsh=MTliMHlldnRldmw2eg%3D%3D" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/CestoCapital?locale=es_LA" target="_blank"><i
+                        class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/cestocapital/?igsh=MTliMHlldnRldmw2eg%3D%3D" target="_blank"><i
+                        class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.youtube.com/@cestocapital" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-              
-    
+
+
             </div>
         </div>
     </div>
