Agregado seccion Noticias

--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
 
     </div>
     </div>
-
-</body>
 <section class="section">
 
     <div class="slider">
@@ -60,19 +58,26 @@
                 <label for="radio3" class="m-btn"></label>
                 <label for="radio4" class="m-btn"></label>
             </div>
+            </body>
 </section>
 
 <section class="container">
     <div class="card">
+         <div class="infoCesto">
+            <h2>¿Qué es el Cestoball?</h2>
+            <iframe src="https://www.youtube.com/embed/l0sf-VC92VU?si=OGXbYWzJ-9mFvv6U" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
         <div class="card-acceso">ACCESO A LINKS</div>
         <li><a href="">Sistema Cesto Online</a></li>
         <li><a href="">Listado de Jugadores Habilitados</a></li>
         <li><a href="">Listado de Staff Tecnico Habilitado</a></li>
         <li><a href="">Listado de Delegados Habilitados</a></li>
         <li><a href="">Listado de Jueces Habilitados</a></li>
-
-
     </div>
+
 
 </section>
 
@@ -104,7 +109,6 @@
             </div>
         </div>
     </div>
-    <div class="grupo2"></div>
 </footer>
 
 </html>
